331/hw5/y.output
Grammar

    0 $accept: session $end

    1 session: %empty
    2        | session toplevel '\n'
    3        | session error

    4 toplevel: expr
    5         | '?'
    6         | '.'

    7 expr: NUMBER
    8     | NAME
    9     | NAME '=' expr
   10     | expr '&' expr
   11     | expr '|' expr
   12     | expr EQ expr
   13     | expr '>' expr
   14     | expr '<' expr
   15     | expr '+' expr
   16     | expr '-' expr
   17     | expr '*' expr
   18     | expr '/' expr
   19     | '-' expr
   20     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 2
    '&' (38) 10
    '(' (40) 20
    ')' (41) 20
    '*' (42) 17
    '+' (43) 15
    '-' (45) 16 19
    '.' (46) 6
    '/' (47) 18
    '<' (60) 14
    '=' (61) 9
    '>' (62) 13
    '?' (63) 5
    '|' (124) 11
    error (256) 3
    NAME <symp> (258) 8 9
    NUMBER <dval> (259) 7
    EQ (260) 12
    UMINUS (261)


Nonterminals, with rules where they appear

    $accept (21)
        on left: 0
    session (22)
        on left: 1 2 3
        on right: 0 2 3
    toplevel (23)
        on left: 4 5 6
        on right: 2
    expr <dval> (24)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 4 9 10 11 12 13 14 15 16 17 18 19 20


State 0

    0 $accept: • session $end

    $default  reduce using rule 1 (session)

    session  go to state 1


State 1

    0 $accept: session • $end
    2 session: session • toplevel '\n'
    3        | session • error

    $end    shift, and go to state 2
    error   shift, and go to state 3
    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '?'     shift, and go to state 7
    '.'     shift, and go to state 8
    '('     shift, and go to state 9

    toplevel  go to state 10
    expr      go to state 11


State 2

    0 $accept: session $end •

    $default  accept


State 3

    3 session: session error •

    $default  reduce using rule 3 (session)


State 4

    8 expr: NAME •
    9     | NAME • '=' expr

    '='  shift, and go to state 12

    $default  reduce using rule 8 (expr)


State 5

    7 expr: NUMBER •

    $default  reduce using rule 7 (expr)


State 6

   19 expr: '-' • expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 13


State 7

    5 toplevel: '?' •

    $default  reduce using rule 5 (toplevel)


State 8

    6 toplevel: '.' •

    $default  reduce using rule 6 (toplevel)


State 9

   20 expr: '(' • expr ')'

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 14


State 10

    2 session: session toplevel • '\n'

    '\n'  shift, and go to state 15


State 11

    4 toplevel: expr •
   10 expr: expr • '&' expr
   11     | expr • '|' expr
   12     | expr • EQ expr
   13     | expr • '>' expr
   14     | expr • '<' expr
   15     | expr • '+' expr
   16     | expr • '-' expr
   17     | expr • '*' expr
   18     | expr • '/' expr

    EQ   shift, and go to state 16
    '&'  shift, and go to state 17
    '|'  shift, and go to state 18
    '>'  shift, and go to state 19
    '<'  shift, and go to state 20
    '-'  shift, and go to state 21
    '+'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 4 (toplevel)


State 12

    9 expr: NAME '=' • expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 25


State 13

   10 expr: expr • '&' expr
   11     | expr • '|' expr
   12     | expr • EQ expr
   13     | expr • '>' expr
   14     | expr • '<' expr
   15     | expr • '+' expr
   16     | expr • '-' expr
   17     | expr • '*' expr
   18     | expr • '/' expr
   19     | '-' expr •

    $default  reduce using rule 19 (expr)


State 14

   10 expr: expr • '&' expr
   11     | expr • '|' expr
   12     | expr • EQ expr
   13     | expr • '>' expr
   14     | expr • '<' expr
   15     | expr • '+' expr
   16     | expr • '-' expr
   17     | expr • '*' expr
   18     | expr • '/' expr
   20     | '(' expr • ')'

    EQ   shift, and go to state 16
    '&'  shift, and go to state 17
    '|'  shift, and go to state 18
    '>'  shift, and go to state 19
    '<'  shift, and go to state 20
    '-'  shift, and go to state 21
    '+'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    ')'  shift, and go to state 26


State 15

    2 session: session toplevel '\n' •

    $default  reduce using rule 2 (session)


State 16

   12 expr: expr EQ • expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 27


State 17

   10 expr: expr '&' • expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 28


State 18

   11 expr: expr '|' • expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 29


State 19

   13 expr: expr '>' • expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 30


State 20

   14 expr: expr '<' • expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 31


State 21

   16 expr: expr '-' • expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 32


State 22

   15 expr: expr '+' • expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 33


State 23

   17 expr: expr '*' • expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 34


State 24

   18 expr: expr '/' • expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 35


State 25

    9 expr: NAME '=' expr •
   10     | expr • '&' expr
   11     | expr • '|' expr
   12     | expr • EQ expr
   13     | expr • '>' expr
   14     | expr • '<' expr
   15     | expr • '+' expr
   16     | expr • '-' expr
   17     | expr • '*' expr
   18     | expr • '/' expr

    EQ   shift, and go to state 16
    '&'  shift, and go to state 17
    '|'  shift, and go to state 18
    '>'  shift, and go to state 19
    '<'  shift, and go to state 20
    '-'  shift, and go to state 21
    '+'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 9 (expr)


State 26

   20 expr: '(' expr ')' •

    $default  reduce using rule 20 (expr)


State 27

   10 expr: expr • '&' expr
   11     | expr • '|' expr
   12     | expr • EQ expr
   12     | expr EQ expr •
   13     | expr • '>' expr
   14     | expr • '<' expr
   15     | expr • '+' expr
   16     | expr • '-' expr
   17     | expr • '*' expr
   18     | expr • '/' expr

    '>'  shift, and go to state 19
    '<'  shift, and go to state 20
    '-'  shift, and go to state 21
    '+'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 12 (expr)


State 28

   10 expr: expr • '&' expr
   10     | expr '&' expr •
   11     | expr • '|' expr
   12     | expr • EQ expr
   13     | expr • '>' expr
   14     | expr • '<' expr
   15     | expr • '+' expr
   16     | expr • '-' expr
   17     | expr • '*' expr
   18     | expr • '/' expr

    EQ   shift, and go to state 16
    '>'  shift, and go to state 19
    '<'  shift, and go to state 20
    '-'  shift, and go to state 21
    '+'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 10 (expr)


State 29

   10 expr: expr • '&' expr
   11     | expr • '|' expr
   11     | expr '|' expr •
   12     | expr • EQ expr
   13     | expr • '>' expr
   14     | expr • '<' expr
   15     | expr • '+' expr
   16     | expr • '-' expr
   17     | expr • '*' expr
   18     | expr • '/' expr

    EQ   shift, and go to state 16
    '>'  shift, and go to state 19
    '<'  shift, and go to state 20
    '-'  shift, and go to state 21
    '+'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 11 (expr)


State 30

   10 expr: expr • '&' expr
   11     | expr • '|' expr
   12     | expr • EQ expr
   13     | expr • '>' expr
   13     | expr '>' expr •
   14     | expr • '<' expr
   15     | expr • '+' expr
   16     | expr • '-' expr
   17     | expr • '*' expr
   18     | expr • '/' expr

    '-'  shift, and go to state 21
    '+'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 13 (expr)


State 31

   10 expr: expr • '&' expr
   11     | expr • '|' expr
   12     | expr • EQ expr
   13     | expr • '>' expr
   14     | expr • '<' expr
   14     | expr '<' expr •
   15     | expr • '+' expr
   16     | expr • '-' expr
   17     | expr • '*' expr
   18     | expr • '/' expr

    '-'  shift, and go to state 21
    '+'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 14 (expr)


State 32

   10 expr: expr • '&' expr
   11     | expr • '|' expr
   12     | expr • EQ expr
   13     | expr • '>' expr
   14     | expr • '<' expr
   15     | expr • '+' expr
   16     | expr • '-' expr
   16     | expr '-' expr •
   17     | expr • '*' expr
   18     | expr • '/' expr

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 16 (expr)


State 33

   10 expr: expr • '&' expr
   11     | expr • '|' expr
   12     | expr • EQ expr
   13     | expr • '>' expr
   14     | expr • '<' expr
   15     | expr • '+' expr
   15     | expr '+' expr •
   16     | expr • '-' expr
   17     | expr • '*' expr
   18     | expr • '/' expr

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 15 (expr)


State 34

   10 expr: expr • '&' expr
   11     | expr • '|' expr
   12     | expr • EQ expr
   13     | expr • '>' expr
   14     | expr • '<' expr
   15     | expr • '+' expr
   16     | expr • '-' expr
   17     | expr • '*' expr
   17     | expr '*' expr •
   18     | expr • '/' expr

    $default  reduce using rule 17 (expr)


State 35

   10 expr: expr • '&' expr
   11     | expr • '|' expr
   12     | expr • EQ expr
   13     | expr • '>' expr
   14     | expr • '<' expr
   15     | expr • '+' expr
   16     | expr • '-' expr
   17     | expr • '*' expr
   18     | expr • '/' expr
   18     | expr '/' expr •

    $default  reduce using rule 18 (expr)
